fix: fix vertical scrollbar on userProfile page

--- a/src/pages/userProfile/styles.css
+++ b/src/pages/userProfile/styles.css
@@ -11,10 +11,10 @@
 }
 .userProfileContainer .content {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
-    margin-left: 10%;
+    padding-left: 5%;
 
 }
 .userProfileContainer .form {
